--- a/views/admin/couponManagement.ejs
+++ b/views/admin/couponManagement.ejs
@@ -89,7 +89,9 @@
                                                 </td>
                                                
                                                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium space-x-3">
-                                                    
+                                                    <a href="/admin/editCoupon/<%= coupon._id %>" class="text-blue-600 hover:text-blue-800">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
                                                    <button  onclick="deleteCoupon('<%= coupon._id %>')" class="text-red-600 hover:text-red-800">
                                                         <i class="fas fa-trash"></i>
                                                    </button>
