--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -74,15 +74,15 @@
   </div>
   <div class="bg-yellow-100 p-6 rounded-lg text-center">
     <p class="text-gray-600">Total Discount</p>
-    <h3 class="text-2xl font-bold">₹ <%= totalDiscount %></h3>
+    <h3 class="text-2xl font-bold"><%= totalDiscount %></h3>
   </div>
   <div class="bg-purple-100 p-6 rounded-lg text-center">
     <p class="text-gray-600">Net Sales</p>
-    <h3 class="text-2xl font-bold">₹ <%= netSales %></h3>
+    <h3 class="text-2xl font-bold"> <%= netSales %></h3>
   </div>
   <div class="bg-red-100 p-6 rounded-lg text-center">
     <p class="text-gray-600">Total Refunds</p>
-    <h3 class="text-2xl font-bold">₹ <%= totalRefunds %></h3>
+    <h3 class="text-2xl font-bold"> <%= totalRefunds %></h3>
   </div>
 </div>
 
